<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoeDetailFragment"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/shoename_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoename_title" />

        <EditText
            android:id="@+id/showname_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/company_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_title" />

        <EditText
            android:id="@+id/company_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/shoesize_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoesize_title" />

        <EditText
            android:id="@+id/showsize_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_title" />

        <EditText
            android:id="@+id/description_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>